<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_text" >
            </TextView>

            <TextView
                android:id="@+id/total_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="30dp"
                android:text="@string/total_score" >
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_text" >
            </TextView>

            <TextView
                android:id="@+id/current_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="14dp"
                android:text="@string/current_score" >
            </TextView>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/dice_1"
                android:layout_width="82dp"
                android:layout_height="82dp"
                android:tag="1"
                android:src="@drawable/white1" />

            <ImageButton
                android:id="@+id/dice_2"
                android:layout_width="82dp"
                android:layout_height="82dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:tag="2"
                android:src="@drawable/white1" />

            <ImageButton
                android:id="@+id/dice_3"
                android:layout_width="82dp"
                android:layout_height="82dp"
                android:tag="3"
                android:src="@drawable/white1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/dice_4"
                android:layout_width="82dp"
                android:layout_height="82dp"
                android:tag="4"
                android:src="@drawable/white1" />

            <ImageButton
                android:id="@+id/dice_5"
                android:layout_width="82dp"
                android:layout_height="82dp"
                android:tag="5"
                android:src="@drawable/white1" />

            <ImageButton
                android:id="@+id/dice_6"
                android:layout_width="82dp"
                android:layout_height="82dp"
                android:tag="6"
                android:src="@drawable/white1" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/throw_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/throw_text" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_text" />
    </LinearLayout>

</LinearLayout>